<resources>
    <string name="app_name">TrainingBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_to">Welcome to</string>
    <string name="bmi">BMI</string>
    <string name="bmi_long">Body Mass Index (BMI)</string>
    <string name="exercises">Exercises</string>
    <string name="exercise">Exercise</string>
    <string name="workout">Workout</string>
    <string name="logbook">Log book</string>
    <string name="supplements">Supplements</string>
    <string name="enter_weight">Enter weight(KG): </string>
    <string name="enter_height">Enter height(MET): </string>
    <string name="calculate">Calculate</string>
    <string name="view_bmi_progress_graph">View BMI progress graph</string>
    <string name="your_bmi_is">Your BMI is ...</string>
    <string name="exercise_type">Exercies type: </string>
    <string name="rep_count">Rep count: </string>
    <string name="add_to_stats">Add to stats</string>
    <string name="check_stats">Check stats</string>
    <string name="weight">Weight(KG):</string>
    <string name="bmi_weight_graphs">BMI Weight graphs</string>
    <string name="weight_graph">Weight</string>
    <string name="view_weight_progress_graph">View weight progress graph</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="please_choose_exercise">Please choose the type of exercise for which you want stats.</string>
    <string name="information_and_efects">Information and effects:</string>
    <string name="nutritional_information">Nutritional information:</string>
    <string name="add_new_workout">Add new workout</string>
    <string name="new_workout_name">New workout name:</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="save_workout">Save workout</string>
    <string name="next_step">Next step</string>
    <string name="create_new_workout">Create new workout</string>
    <string name="bmi_below">BMI Below 18.5 = Underweight</string>
    <string name="bmi_healty">BMI 18.5-24.9 = Healthy Weight</string>
    <string name="bmi_overweight">BMI 25-29.9 = Overweight</string>
    <string name="bmi_obese">BMI Over 30 = Obese</string>
    <string name="acai_berry">Acai berry</string>
    <string name="acai_berry_description">Acai berry is a well known power food that helps with both detoxing the body cleaning out all of the bad and at the same time acting as a fat burner. Acai berry cann come in a number of forms including fruit itself and also in drinks however the main way to take it as a supplement is to take it in capsule or pull form.</string>
    <string name="acai_berry_nutritions">2 Tablets 4.000mg Acai Berry Per Serving </string>
    <string name="bcaa_s">BCAA`s</string>
    <string name="bcaa_s_description">BCAA`s are a form of amino acid`s that help the body to do a number of things. The product typically protects muscles in the body from any sort of stress or trauma during heavy exercise. They also help out in the long run on recovery and help to prevent build up of lactic acid.</string>
    <string name="bcaa_s_nutritions">900mg of L-leucine, 450mg of L-isoleucine, 450mg of L-valine, 12mg of Vitamin B6</string>
    <string name="bulgarian_tribulus">Bulgarian tribulus</string>
    <string name="bulgarian_tribulus_description">Bulgarian tribulus is a popular testosterone booster used in bodybuilding. Research claims that studies show up to a 50 percent increase in testosterone levels whilst taking tribulus. This extra testosterone helps to both shed body fat and also to pack on pure lean muscle due to heightened recovery.</string>
    <string name="bulgarian_tribulus_nutritions">Tribulus should be 100 percent pure, do not take the risk of taking bad supplements.</string>
    <string name="cla">Conjugated linoleic acid</string>
    <string name="cla_description">CLA or Conjugated Linoleic Acid as its full name is known is very popular in the bodybuilding world as a fat burner which has receieved a lot of attention and testing. It includes antioxident properties so removes fat from the body along with cholesterol and helps to clean the body up.</string>
    <string name="cla_nutritions">Calories 20, Total Fat	2 g</string>
    <string name="creatine_monohydrate">Creatine monohydrate</string>
    <string name="creatine_monohydrate_description">Creatine is a naturally built chemical made inside of you, creatine monohydrate allows us to add more of  this chemical into out bodys. And of course there is good reason to want to do so, this chemical helps to repare and build muscle which helps speed up a bulking process. This is a similar product to creatine ester ethyl bbut many people prefer to trust monohydrate as it is an older product that is considered to be tried and tested.</string>
    <string name="creatine_monohydrate_nutritions">Calories 5,	Sodium	0 mg, Total Fat	0 g, Potassium	0 mg, Saturated	0 g, Total Carbs 1 g, Polyunsaturated 0 g, Dietary Fiber 0 g, Monounsaturated 0 g, Sugars 0 g, Trans 0 g, Protein 0 g, Cholesterol0 mg.</string>
    <string name="green_tea">Green tea</string>
    <string name="green_tea_description">"Green tea is used as both a fat burner and an anti oxident, it is idely available in most supermarkets or health stores and also contains healing properties. The product has been used for many years by multiple cultures and is considered to be one of the best natural fat burners around.</string>
    <string name="green_tea_nutritions">Green tea contains various compounds such as polyphenols, tannin, theophylline, caffeine, vitamin C and many other organic substance.</string>
    <string name="mass_gainer">Mass gainer</string>
    <string name="mass_gainer_description">"Mass gainer is a supplement that does exactly as it says, the extra caloric intake due to mass gainer allows the taker to put on mass amount of weight. This weight will be hard powerful muscle if worked out hard whilst using the supplement however if the user does not workout hard then the supplement will turn to body fat. These types of products contain a large amount of calories and of which are a high amount of carbs.</string>
    <string name="mass_gainer_nutritions">K cals/K: 1,000k cals, Protein: 50g, Fat:- Of which are saturates 10.4g (From the Milk) - Polyunsaturated Fat: 18g - Omega-6: 2g - MCTs: 7g - Soya Lecithin: 1g, Carbohydrates: 96.2g, Fibre: 3g, Sodium: 907mg, Calcium: 1389mg.</string>
    <string name="nitric_oxyde">Nitric oxyde</string>
    <string name="nitric_oxyde_description">Nitric oxide is used as a powerful pre workout supplement, this is typically taken half an hour before a workout and will help to pump up the user of it. Nitric acid delivers large ammounts of energy and concentration allowing a clean heavy workout session in the gym or at home.</string>
    <string name="nitric_oxyde_nutritions">Per Serving Per 100g, K cals/K 71k cals, Protein1.64g, Fat Trace Trace Carbohydrates 18.5g,- Of which sugars 18.5g, Citrulline Malate 700mg, Tyrosine 700mg, Beta Alanine 350mg, L-Histidine 350mg, Lypodiamine® 350mg, Nicotinamide 285mg, Vitamin C from Ascorbic acid (Antioxidant) 350mg, Alpha-Keto-Glutarate 1500mg, Green tea Ext 40% 140mg, Taurine 1500mg, L- Glutamine 2100mg, L-Valine 56mg, Caffeine 200mg, Creatine Monohydrate 2100mg, Calcium from calcium citrate 118mg, Potassium from Potassium citrate 118mg, L-Isoleucine107mg 324mgL- Leucine 140mg, Tri-sodium citrate 140mg, L-Methionine 1500mg, Beta carotene (Antioxidant) 75mg.</string>
    <string name="protein_bar">Protein bar</string>
    <string name="protein_bar_description">A protein bar is an alternative way to ensure that an athlete is getting a good amount of protein per day, they are easy to eat while on the go and relatively cheap if bought in bulk. This protein will be used in post workout to help the recovery process of the body.</string>
    <string name="protein_bar_nutritions">Total Calories: 278.6, Protein: 18.8g, Total Carbohydrates: 34.9g, Sugars: 5g, Dietary Fiber: 2.6g, Fat: 7.1g, Saturates: 3g, Sodium: 75mg</string>
    <string name="whey_protein">Whey protein</string>
    <string name="whey_protein_description">Whey protein is used to fuel your muscles during recovery by feeding them anabolic amino acids.If not used properly then it may cause a build up of fat due to excess calories not being used.</string>
    <string name="whey_protein_nutritions">K cals/K: 146 k cals, Protein: 23g*,Fat: 2.7g of which are saturates: 2.2g, Trans Fat: 0g, Carbohydrates: 11g, Sodium: Trace.</string>
    <string name="zepherine">Zepherine</string>
    <string name="zepherine_description">Zepherine is a new hardcore fat burner used to help the body get rid of excess fat. This product boosts an individuals metabolism allowing them to burn more calories and at the same time suppress there appetite.</string>
    <string name="zepherine_nutritions">320mg Bitter orange, 117mg Caffeine Anhydrous, 20mg Green Tea, 20mg Guarana, 10mg N-Acetyl-L-Carnitine.</string>
    <string name="alternating_crunches">Alternating crunches</string>
    <string name="alternating_crunches_description">Lie the body flat down with a slight bend in your legs. Now lift one side of your upper body whilst lifting the opposite side of your lower body, try to touch your knee with your arm while doing this. Repeat this step on the opposite side of your body.</string>
    <string name="bar_curl">Bar curl</string>
    <string name="bar_curl_description">Choose desired weight on a darbell and move it to waist height. Lift the weight in a curled fashion while the biceps and triceps are kept at a stable position. Lift the bar all the way to shoulder height and then slowly lower the bar before repeating.</string>
    <string name="behind_the_neck_shoulder_press">Behind the neck shoulder_press</string>
    <string name="behind_the_neck_shoulder_press_description">With a normal barbell and a low weight hold the bar infro of your neck with the backs of your hands facing you. Now lift the weight up and extend your arms above your head. Slowly lower the weight behind your shoulders to feel a strong pull before pushing the weight back into the above head position ready for repetition.</string>
    <string name="bench_press">Bench press</string>
    <string name="bench_press_description">Make sure to lie down on the bench in a comfortable position with the back being flat and the bar being lowered enough to be able to extend the arms with ease. Lift the barbell off the rack and move its position forward to be over the chest. Slowly move the barbell down towards the chest, make sure to get as close to the chest as possible for more effect. Finally push the bar back into its original upwards position, make sure to have a spotter during this exercise incase the weight is too heavy to lift back into place.</string>
    <string name="bulgarian_split_squat">Bulgarian split squat</string>
    <string name="bulgarian_split_squat_description">Stand straight with one leg being held back and supported with a bench. Lunge your still standing leg down until you feel a strong pull and then repeat with the opposite leg. </string>
    <string name="chest_press">Chest press</string>
    <string name="chest_press_description">Sit up right with the weight of choose for this movement. Lie down on your back with the dumbells lifted into position by your sides and your arms at a 90 degree angle. Push the dumbells in your hands to extend your arms straight. Lower the dumbell back into position and be sure to hit the 90 degree bend of your arm.</string>
    <string name="crunches">Crunches</string>
</resources>