<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".StartUpActivity" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_to"
            android:textColor="@color/title_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/bmi_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/next_icon"
            android:text="@string/bmi"
            android:textColor="@color/butons_spinners_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exercises_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/next_icon"
            android:text="@string/exercises"
            android:textColor="@color/butons_spinners_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/workout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/next_icon"
            android:text="@string/workout"
            android:textColor="@color/butons_spinners_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logbook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/next_icon"
            android:text="@string/logbook"
            android:textColor="@color/butons_spinners_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/supplements_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/next_icon"
            android:text="@string/supplements"
            android:textColor="@color/butons_spinners_color"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>